<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_phong"
        android:icon="@drawable/ic_nav_bed"
        android:title="@string/khach_nav_dat_phong" />
    <item
        android:id="@+id/nav_tin_tuc"
        android:icon="@drawable/ic_nav_article"
        android:title="@string/nav_tin_tuc" />
    <item
        android:id="@+id/nav_danh_gia"
        android:icon="@drawable/ic_nav_star"
        android:title="@string/nav_danh_gia" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_nav_menu"
        android:title="@string/nav_menu" />
</menu>
